--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Clock Web</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script>
-        let a;
-        let time;
-        let date;
-        const options= {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'};
-        setInterval(() => {
-            a=new Date();
-            time = a.getHours() + ":" + a.getMinutes() + ":" + a.getSeconds();
-            date = a.toLocaleDateString(undefined, options);
-            document.getElementById("time").innerHTML = time + "<br> on " + date;    
-        }, 1000);
-    </script>
+      setInterval(() => {
+          let date = new Date();
+          let hours = date.getHours();
+          let minutes = date.getMinutes();
+          let seconds = date.getSeconds();
+          let ampm = hours >= 12 ? 'PM' : 'AM';
+          hours = hours % 12;
+          hours = hours ? hours : 12; // the hour '0' should be '12'
+          minutes = minutes < 10 ? '0'+minutes : minutes;
+          seconds = seconds < 10 ? '0'+seconds : seconds;
+          let strTime = hours + ':' + minutes + ':' + seconds + ' ' + ampm;
+          document.getElementById("time").innerHTML = strTime;  
+      }, 1000);
+  </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Clock</a>
+          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +35,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,8 +65,10 @@
         <p class="lead">we have got you covered. Here we are showing real time.</p>
         <hr class="my-4">
         <p>We are here to show you the time for different countries.</p>
+        <!--  add a button to visit my youtube channel -->
+        <a class="btn btn-primary btn-lg" href="https://www.youtube.com/channel/UC1ZV7Z2QXJhC3ZLX6J8g5JQ" role="button" style="background-color: red;">Visit my youtube channel</a>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Browse Times</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button" style="background-color: red;">Browse Times</a>
         </p>
       </div>
     </div>
